custom-openshift-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
  name: webhook
spec:
  type: NodePort
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: webhook
