custom-openshift-yaml/webhook-kn-serving.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: webhook-knative-manual
spec:
  template:
    metadata:
      name: webhook-knative-manual-v1
      annotations:
        autoscaling.knative.dev/target: "10"
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "5"
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/default/webhook-jvm:latest
        #- image: quay.io/omar.gaye-ibm/webhook-jvm:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /receiver/live
          readinessProbe:
            httpGet:
              path: /receiver/ready
    traffic:
      - tag: v1
        revisionName: webhook-knative-manual-v1
        percent: 100
