custom-openshift-yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webhook
  name: webhook
spec:
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
  to:
    kind: Service
    name: webhook
    weight: 100
